--- a/admin.html
+++ b/admin.html
@@ -49,6 +49,10 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Manage Transactions
                             </a>
+                            <a class="nav-link" href="managebooklistings.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Manage Book Listings
+                            </a>
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
