--- a/manage-account.html
+++ b/manage-account.html
@@ -117,7 +117,14 @@
         </div>
     </div>
 </nav>
-
+<!-- Verification application rejection alert -->
+<div class="d-flex justify-content-center mt-5 p-0 mb-0 " id="verifyRejectedAlert">
+    <div class="alert alert-danger text-center mb-0" role="alert">
+        <h4 class="p-0 m-0">Your verification application was denied! 
+            <a href="#" class="alert-link" style="text-decoration: none;" id="whyRejectedLink">Click Here Why</a>
+        </h4>
+    </div>
+</div>
     <!-- Page Content -->
     <div class="container p-0 mt-5">
         <!-- Content Header (Profile Pic, User Name) -->
@@ -420,6 +427,20 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary" form="verificationForm">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal for Rejection Message -->
+            <div class="modal fade" id="rejectionModal" tabindex="-1" aria-labelledby="rejectionModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="rejectionModalLabel">Verification Denied</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body" id="rejectionMessageBody">
+                            <!-- The rejection message will be inserted here -->
                         </div>
                     </div>
                 </div>
