added favorites page and functionality

--- a/admin.html
+++ b/admin.html
@@ -45,10 +45,6 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Manage Users
                             </a>
-                            <a class="nav-link" href="managetransactions.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Manage Transactions
-                            </a>
                             <a class="nav-link" href="managebooklistings.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Manage Book Listings
@@ -91,17 +87,17 @@
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-table me-1"></i>
-                                Book Listings
+                                Transactions
                             </div>
                             <div class="card-body">
                                 <table id="datatablesSimple">
                                     <thead>
                                         <tr>
                                             <th>Book Title</th>
-                                            <th>Author</th>
+                                            <th>Buyer</th>
                                             <th>Seller</th>
-                                            <th>Condition</th>
-                                            <th>Genre</th>
+                                            <th>Date Sold</th>
+                                            <th>Title</th>
                                             <th>Price</th>
                                         </tr>
                                     </thead>
