--- a/my-listings.html
+++ b/my-listings.html
@@ -217,5 +217,9 @@
                 </div>
             </div>
         </div>
+        <!-- Footer -->
+        <footer class="py-3" style="background-color: #e0dccf; margin-top: 1px;">
+            <p class="text-center p-0 m-0">© 2024 Eco-Reads, Inc. All rights reserved.</p>
+        </footer> 
 </body>
 </html>
