--- a/chat.html
+++ b/chat.html
@@ -318,7 +318,10 @@
   </div>
 </div>
 
-
+<!-- Footer -->
+<footer class="py-3" style="background-color: #e0dccf; margin-top: 230px;">
+    <p class="text-center p-0 m-0">© 2024 Eco-Reads, Inc. All rights reserved.</p>
+</footer>
 <script defer src="js/bootstrap.bundle.min.js"></script>
 <script defer type="module" src="js/chat.js"></script> 
 </body>
