--- a/genre.html
+++ b/genre.html
@@ -159,6 +159,10 @@
                 </div>
             </div>
         </div>
+<!-- Footer -->
+<footer class="py-3" style="background-color: #e0dccf; margin-top: 593px;">
+    <p class="text-center p-0 m-0">© 2024 Eco-Reads, Inc. All rights reserved.</p>
+</footer>        
 </body>
 </html>
 
