--- a/index.html
+++ b/index.html
@@ -99,5 +99,9 @@
             </div>
         </div>
     </div>
+<!-- Footer -->
+<footer class="py-3" style="background-color: #e0dccf; ">
+    <p class="text-center p-0 m-0">© 2024 Eco-Reads, Inc. All rights reserved.</p>
+</footer> 
 </body>
 </html>
