--- a/manage-account.html
+++ b/manage-account.html
@@ -445,6 +445,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Footer -->
+            <footer class="py-3" style="background-color: #e0dccf; margin-top: ;">
+                <p class="text-center p-0 m-0">© 2024 Eco-Reads, Inc. All rights reserved.</p>
+            </footer> 
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/manage-account.js"></script>              
 </body>
