fixed index page to display approved boosk only

--- a/admin.html
+++ b/admin.html
@@ -93,21 +93,21 @@
                                 <table id="datatablesSimple">
                                     <thead>
                                         <tr>
-                                            <th>Book Title</th>
+                                            <th>Transaction ID</th>
                                             <th>Buyer</th>
                                             <th>Seller</th>
                                             <th>Date Sold</th>
-                                            <th>Title</th>
+                                            <th>Book Title</th>
                                             <th>Price</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th>Book Title</th>
-                                            <th>Author</th>
+                                            <th>Transaction ID</th>
+                                            <th>Buyer</th>
                                             <th>Seller</th>
-                                            <th>Condition</th>
-                                            <th>Genre</th>
+                                            <th>Date Sold</th>
+                                            <th>Book Title</th>
                                             <th>Price</th>
                                         </tr>
                                     </tfoot>
